--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "copy-to-clipboard": "^3.3.1",
     "next": "latest",
+    "next-seo": "^4.7.3",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "copy-to-clipboard": "^3.3.1",
-    "next-seo": "^4.7.3",
     "tailwindcss": "^2.2.19",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^7.0.1"
+    "youtube-dl-exec": "^2.4.8",
+    "ytdl-core": "^4.11.5"
   },
   "license": "MIT"
 }
